--- a/OJSinTheWorld/Chile/Informe.qmd
+++ b/OJSinTheWorld/Chile/Informe.qmd
@@ -618,7 +618,124 @@ El análisis de crecimiento entre 2023 y 2024 revela un ecosistema editorial din
 - **URLs evaluables:** 208 → 225 (+8.2%)
 - **Acervo histórico:** 133,931 → 144,529 (+7.9%)
 
-### 3.5 Análisis de Visibilidad Académica: Integración OpenAlex
+### 3.3 Análisis de Calidad Editorial: Informes Dialnet
+
+#### 3.3.1 Procesamiento de Informes (Script 8)
+
+**Metodología:**
+Se procesaron **95 informes HTML** de Dialnet descargados manualmente, extrayendo información estructurada sobre errores de calidad y completitud de metadatos mediante `scripts/8_procesar_informes_dialnet.py`.
+
+**Cobertura del análisis:**
+- **Total informes procesados:** 95 revistas chilenas
+- **Archivo generado:** `visualizations/dialnet_informes_procesados.csv`
+- **Datos extraídos:** Errores por gravedad, tipos de errores, porcentajes de metadatos
+
+#### 3.3.2 Resultados de Calidad Editorial
+
+**Estado general de errores:**
+- **Revistas sin errores:** 0 (0.0%)
+- **Revistas con errores:** 95 (100.0%)
+- **Total errores detectados:** 59,602
+  - **Alta gravedad:** 35,811 (60.1%)
+  - **Media gravedad:** 23,791 (39.9%)
+- **Promedio errores por revista:** 627.4
+
+#### 3.3.3 Revistas con Mayor Número de Errores
+
+| Ranking | Dominio | Total Errores | Alta Gravedad | Media Gravedad |
+|---------|---------|---------------|---------------|----------------|
+| 1 | www.revistasdex.uchile.cl | 5,583 | 2,626 | 2,957 |
+| 2 | revistas.uach.cl | 3,881 | 1,607 | 2,274 |
+| 3 | revistas.uv.cl | 2,865 | 1,988 | 877 |
+| 4 | rhv.uv.cl | 2,865 | 1,988 | 877 |
+| 5 | www.iace.uv.cl | 2,865 | 1,988 | 877 |
+
+#### 3.3.4 Completitud de Metadatos
+
+**Promedios de completitud por tipo de metadato:**
+
+| Tipo de Metadato | Completitud Promedio |
+|------------------|---------------------|
+| Títulos | 100.0% |
+| Enlaces | 100.0% |
+| Autores | 99.3% |
+| Resúmenes | 87.0% |
+| Afiliaciones | 75.6% |
+| Palabras clave | 65.6% |
+| Referencias | 33.7% |
+
+#### 3.3.5 Análisis de Tipos de Errores por Gravedad (Script 9)
+
+**Top 5 errores de alta gravedad más frecuentes:**
+
+| Ranking | Tipo de Error | Ocurrencias |
+|---------|---------------|-------------|
+| 1 | Artículo sin número de página inicial | 12,201 |
+| 2 | Artículo sin ejemplar identificado en la importación | 6,964 |
+| 3 | Artículo con título y subtítulo en mayúsculas | 6,810 |
+| 4 | Artículo con resumen repetido para la misma revista | 2,056 |
+| 5 | Artículo con autorías duplicadas | 1,968 |
+
+**Top 5 errores de media gravedad más frecuentes:**
+
+| Ranking | Tipo de Error | Ocurrencias |
+|---------|---------------|-------------|
+| 1 | Autor con apellido 2 de longitud menor de 4 caracteres | 6,468 |
+| 2 | Ejemplar marcado como no paginado y contiene artículos con página final | 5,257 |
+| 3 | Artículo con título repetido para la misma revista | 2,721 |
+| 4 | Artículo con referencias cuyo literal es demasiado corto | 2,080 |
+| 5 | Artículo con título repetido | 1,843 |
+
+**Distribución de revistas por rangos de errores:**
+
+| Rango de Errores | Nº Revistas | Porcentaje |
+|------------------|--------------|------------|
+| Muy Alto (>2000) | 9 | 9.5% |
+| Alto (1000-2000) | 10 | 10.5% |
+| Medio (500-999) | 8 | 8.4% |
+| Bajo (100-499) | 43 | 45.3% |
+| Muy Bajo (<100) | 25 | 26.3% |
+
+**Revistas con mayor proporción de errores graves:**
+
+| Ranking | Dominio | % Alta Gravedad | Errores Alta/Total |
+|---------|---------|-----------------|--------------------|
+| 1 | revistaderechovaldivia.cl | 97.6% | 1,160/1,188 |
+| 2 | intushistoria.uai.cl | 97.6% | 775/794 |
+| 3 | boletin.scha.cl | 94.6% | 2,390/2,526 |
+| 4 | nuestramerica.cl | 92.9% | 351/378 |
+| 5 | revistalimite.uta.cl | 91.9% | 846/921 |
+
+**Diversidad de tipos de errores:**
+
+| Categoría | Tipos Únicos |
+|-----------|---------------|
+| Alta gravedad | 23 |
+| Media gravedad | 17 |
+| **Total** | **40** |
+
+#### 3.3.6 Implicaciones para Indexación
+
+**Fortalezas identificadas:**
+- **Metadatos básicos completos:** Títulos y enlaces al 100%
+- **Información de autoría:** 99.3% de completitud
+- **Contenido académico:** 87% de resúmenes disponibles
+
+**Áreas de mejora críticas:**
+- **Referencias bibliográficas:** Solo 33.7% de completitud
+- **Palabras clave:** 65.6% requiere mejora para indexación
+- **Errores de alta gravedad:** 35,811 errores requieren atención prioritaria
+- **Problemas de paginación:** 12,201 artículos sin página inicial
+- **Estandarización de títulos:** 6,810 casos con mayúsculas incorrectas
+
+**Recomendaciones operativas:**
+1. **Priorización por calidad:** Enfocar esfuerzos en 25 revistas con <100 errores
+2. **Mejora de metadatos:** Implementar estándares para referencias y palabras clave
+3. **Capacitación editorial:** Programas de mejora de calidad para editores
+4. **Corrección de paginación:** Atender 12,201 artículos sin numeración
+5. **Estandarización de formato:** Corregir mayúsculas en títulos y subtítulos
+
+### 3.4 Análisis de Visibilidad Académica: Integración OpenAlex
 
 #### 3.5.1 Metodología de Enriquecimiento (Script 10)
 
@@ -716,13 +833,162 @@ Se implementó `scripts/10_openalex.py` para consultar la API de OpenAlex y enri
 - **Productividad vs visibilidad**: 0.075 (correlación débil)
 - **Artículos OpenAlex vs citaciones**: 0.562 (correlación moderada)
 
-#### 3.5.5 Implicaciones para Estrategia de Indexación
+#### 3.4.5 Implicaciones para Estrategia de Indexación
 
 **Criterios de priorización actualizados:**
 1. **Revistas estrella** (5): Indexación prioritaria inmediata
 2. **Oportunidades de mejora** (24): Alta productividad, potencial de impacto
 3. **Revistas emergentes** (14): Crecimiento sostenido, H-index en desarrollo
 4. **Priorización institucional**: UC y UChile como líderes en volumen
+
+#### 3.4.6 Análisis OpenAlex Ampliado para Revistas Chilenas Activas
+
+Se realizó un enriquecimiento específico de datos OpenAlex para las **316 revistas chilenas activas**, obteniendo información detallada sobre políticas de acceso abierto, métricas de impacto y características editoriales.
+
+**Consideraciones Técnicas:**
+
+**Limitación metodológica:** De las 316 revistas activas, **12 revistas (3.8%) fueron excluidas** del análisis OpenAlex por carecer de ISSN válido, requisito indispensable para consultas en la API de OpenAlex.
+
+**Revistas excluidas (sin ISSN):**
+- Comunicaciones: una revista de geología andina
+- Boletín de la Universidad de Chile  
+- MGC / Revista de Gestión Cultural
+- Historia 396
+- Revista Bits de Ciencia
+- Revista de Estudios Históricos
+- Filosofía Juridica
+- Inferencias: Boletín de Bioestadística
+- Nutrición y Vida
+- Revista Estudiantil de Ensayos Monográficos
+- EMERGENCIAS: Cuaderno del Magíster en Comunicación Política
+- Mirada Hemisférica
+
+**Dataset final:** 304 revistas procesadas (96.2% de cobertura)
+
+**Resultados de Indexación y Visibilidad:**
+
+| Métrica | Valor | Porcentaje |
+|---------|-------|------------|
+| **Revistas procesadas** | 304 | 100% |
+| **Indexadas en OpenAlex** | 259 | **85.2%** |
+| **No indexadas** | 45 | 14.8% |
+| **Total artículos indexados** | 120,646 | - |
+| **Total citaciones** | 267,428 | - |
+
+**Políticas de Acceso Abierto:**
+
+| Categoría | Revistas | Porcentaje |
+|-----------|----------|------------|
+| **Completamente Open Access** | 245 | **94.6%** |
+| **Indexadas en DOAJ** | 132 | **51.0%** |
+| **Con APC informado** | 3 | 1.2% |
+| **Fuentes "Core" (CWTS)** | 8 | **3.1%** |
+
+**Hallazgo destacado:** El **94.6%** de las revistas chilenas indexadas en OpenAlex son completamente de acceso abierto, superando significativamente el promedio global.
+
+**Métricas de Impacto:**
+
+| Indicador | Promedio | Mediana |
+|-----------|----------|----------|
+| **H-index** | 9.1 | 6.0 |
+| **i10-index** | 26.3 | 12.0 |
+| **Índice de visibilidad** | 2.8 | 1.2 |
+| **APC promedio (USD)** | $693 | - |
+
+**Revistas de Mayor Impacto:**
+
+| Ranking | Revista | Visibilidad | H-index | Estado OA |
+|---------|---------|-------------|---------|----------|
+| 1 | Chungara Revista de Antropología Chilena | 51.56 | 35 | OA |
+| 2 | Gayana | 37.42 | 27 | OA + DOAJ |
+| 3 | Revista de Biología Marina y Oceanografía | 33.26 | 34 | OA |
+| 4 | Journal of the Chilean Chemical Society | 31.18 | 44 | OA |
+| 5 | Gayana Botanica | 27.40 | 24 | OA + DOAJ |
+
+**Implicaciones Estratégicas:**
+
+1. **Alta adopción de acceso abierto:** El 94.6% de revistas indexadas son completamente OA, posicionando a Chile como líder regional.
+
+2. **Oportunidad DOAJ:** Solo el 51% está en DOAJ, representando potencial de mejora para 127 revistas.
+
+3. **Concentración de impacto:** Las top 5 revistas concentran el mayor impacto en ciencias naturales y químicas.
+
+4. **Limitación técnica:** 12 revistas requieren asignación de ISSN para mejorar su visibilidad internacional.
+
+**Dataset generado:** `13_chile_openalex_ampliado.csv` (32 campos, 304 registros)
+
+### 3.5 Análisis de Crossref - Revistas Chilenas Activas
+
+#### 3.5.1 Cobertura en Crossref
+El análisis de la presencia de revistas chilenas activas en Crossref revela una cobertura significativa:
+
+- **Total revistas analizadas:** 316
+- **Revistas encontradas en Crossref:** 256 (81.0%)
+- **Revistas no registradas:** 60 (19.0%)
+
+#### 3.5.2 Distribución de DOIs Registrados
+
+| Tipo de DOI | Cantidad Total | Promedio por Revista |
+|-------------|----------------|---------------------|
+| DOIs Actuales | 15,910 | 62.1 |
+| DOIs Históricos | 80,844 | 315.8 |
+| **Total DOIs** | **96,754** | **377.9** |
+
+#### 3.5.3 Cobertura de Metadatos
+
+**Metadatos Actuales (Current):**
+
+- Resúmenes: 76.3% ✅ Muy buena cobertura
+- Verificación de similitud: 73.8% ✅ Buena cobertura
+- Licencias: 51.5% ⚠️ Mejorable
+- ORCIDs: 44.9% ⚠️ Mejorable
+- ROR IDs: 18.2% ❌ Baja cobertura
+- Afiliaciones: 8.6% ❌ Muy baja cobertura
+- Referencias: 7.9% ❌ Muy baja cobertura
+- Políticas de actualización: 0.0% ❌ Sin implementar
+
+**Metadatos Históricos (Backfile):**
+- Resúmenes: 42.8%
+- Licencias: 28.5%
+- ORCIDs: 15.8%
+- Referencias: 8.1%
+- Afiliaciones: 3.2%
+
+#### 3.5.4 Top 10 Revistas por DOIs en Crossref
+
+| Posición | Revista | DOIs Totales | DOIs Actuales | DOIs Históricos |
+|----------|---------|--------------|---------------|-----------------|
+| 1 | Atenea (Concepción) | 10,350 | 90 | 10,260 |
+| 2 | Anales de la Universidad de Chile | 2,724 | 90 | 2,634 |
+| 3 | Journal of the Chilean Chemical Society | 1,806 | 73 | 1,733 |
+| 4 | ARS MEDICA Revista de Ciencias Médicas | 1,559 | 103 | 1,456 |
+| 5 | Estudios Internacionales | 1,548 | 42 | 1,506 |
+| 6 | Proyecciones (Antofagasta) | 1,519 | 302 | 1,217 |
+| 7 | Revista de Derecho Público | 1,334 | 23 | 1,311 |
+| 8 | Bosque (Valdivia) | 1,325 | 108 | 1,217 |
+| 9 | Revista de derecho (Coquimbo) | 1,252 | 166 | 1,086 |
+| 10 | Estudios pedagógicos (Valdivia) | 1,242 | 189 | 1,053 |
+
+#### 3.5.5 Relaciones de Versiones y Preprints
+El análisis de relaciones de versiones reveló que las revistas chilenas **no utilizan funcionalidades avanzadas** de Crossref:
+- Artículos con preprints: 0
+- Artículos que son preprints: 0
+- Artículos con versiones: 0
+- Relaciones de reemplazo: 0
+- Total relaciones de versión: 0
+
+#### 3.5.6 Observaciones Clave Crossref
+
+**Fortalezas:**
+- Alta cobertura en Crossref (81.0%)
+- Buena cobertura de resúmenes y verificación de similitud
+- Volumen significativo de DOIs registrados (96,754 totales)
+
+**Áreas de mejora:**
+- Baja cobertura de afiliaciones y referencias
+- Ausencia de políticas de actualización
+- No aprovechamiento de relaciones de versiones/preprints
+- Cobertura mejorable de ORCIDs y licencias
 
 ### 3.6 Análisis Comparativo Cruzado: Integración de Tres Fuentes
 
@@ -786,9 +1052,9 @@ Se clasificaron las **316 revistas** en 5 segmentos estratégicos:
 | **Veterana** | Modernizar infraestructura, nuevos estándares | 51 |
 | **Básico** | Desarrollo integral en los tres niveles | 139 |
 
-### 3.7 Análisis APC vs Revistas Gratuitas (Script 16)
+#### 3.6.6 Análisis APC vs Revistas Gratuitas (Script 16)
 
-#### 3.7.1 Hallazgos Principales
+**Hallazgos Principales:**
 
 El análisis revela que **solo 3 revistas chilenas (0.9%)** cobran Article Processing Charges (APC):
 
@@ -798,7 +1064,7 @@ El análisis revela que **solo 3 revistas chilenas (0.9%)** cobran Article Proce
 | **Gayana (Concepción)** | $1,000 | 27 | Problema |
 | **Gayana Botánica** | $1,000 | 24 | Problema |
 
-#### 3.7.2 Comparación de Métricas Clave
+**Comparación de Métricas Clave:**
 
 | Métrica | Con APC | Gratuitas | Diferencia |
 |---------|---------|-----------|------------|
@@ -807,14 +1073,14 @@ El análisis revela que **solo 3 revistas chilenas (0.9%)** cobran Article Proce
 | **H-Index** | 22.33 | 7.61 | **+193%** |
 | **Total DOIs** | 511.33 | 303.19 | **+69%** |
 
-#### 3.7.3 Distribución por Segmentos
+**Distribución por Segmentos:**
 
 - **Ninguna revista "Estrella"** cobra APC
 - **Segmento "Problema"**: 3.3% cobra APC (2/60)
 - **Segmento "Veterana"**: 2.0% cobra APC (1/51)
 - **Segmentos "Básico" y "Oportunidad"**: 0% cobra APC
 
-#### 3.7.4 Implicaciones Estratégicas
+**Implicaciones Estratégicas:**
 
 **Fortalezas del modelo chileno:**
 - **99.1% de revistas gratuitas** promueve acceso abierto
@@ -825,319 +1091,6 @@ El análisis revela que **solo 3 revistas chilenas (0.9%)** cobran Article Proce
 - Las pocas revistas con APC muestran **mayor impacto académico**
 - Modelo híbrido podría beneficiar revistas de alto impacto
 - **Financiamiento institucional** mantiene acceso abierto
-
-### 3.8 Análisis de Calidad Editorial: Informes Dialnet
-
-#### 3.8.1 Procesamiento de Informes (Script 8)
-
-**Metodología:**
-Se procesaron **95 informes HTML** de Dialnet descargados manualmente, extrayendo información estructurada sobre errores de calidad y completitud de metadatos mediante `scripts/8_procesar_informes_dialnet.py`.
-
-**Cobertura del análisis:**
-- **Total informes procesados:** 95 revistas chilenas
-- **Archivo generado:** `visualizations/dialnet_informes_procesados.csv`
-- **Datos extraídos:** Errores por gravedad, tipos de errores, porcentajes de metadatos
-
-#### 3.8.2 Resultados de Calidad Editorial
-
-**Estado general de errores:**
-- **Revistas sin errores:** 0 (0.0%)
-- **Revistas con errores:** 95 (100.0%)
-- **Total errores detectados:** 59,602
-  - **Alta gravedad:** 35,811 (60.1%)
-  - **Media gravedad:** 23,791 (39.9%)
-- **Promedio errores por revista:** 627.4
-
-#### 3.8.3 Revistas con Mayor Número de Errores
-
-| Ranking | Dominio | Total Errores | Alta Gravedad | Media Gravedad |
-|---------|---------|---------------|---------------|----------------|
-| 1 | www.revistasdex.uchile.cl | 5,583 | 2,626 | 2,957 |
-| 2 | revistas.uach.cl | 3,881 | 1,607 | 2,274 |
-| 3 | revistas.uv.cl | 2,865 | 1,988 | 877 |
-| 4 | rhv.uv.cl | 2,865 | 1,988 | 877 |
-| 5 | www.iace.uv.cl | 2,865 | 1,988 | 877 |
-
-#### 3.8.4 Completitud de Metadatos
-
-**Promedios de completitud por tipo de metadato:**
-
-| Tipo de Metadato | Completitud Promedio |
-|------------------|---------------------|
-| Títulos | 100.0% |
-| Enlaces | 100.0% |
-| Autores | 99.3% |
-| Resúmenes | 87.0% |
-| Afiliaciones | 75.6% |
-| Palabras clave | 65.6% |
-| Referencias | 33.7% |
-
-#### 3.8.5 Análisis de Tipos de Errores por Gravedad (Script 9)
-
-**Top 5 errores de alta gravedad más frecuentes:**
-
-| Ranking | Tipo de Error | Ocurrencias |
-|---------|---------------|-------------|
-| 1 | Artículo sin número de página inicial | 12,201 |
-| 2 | Artículo sin ejemplar identificado en la importación | 6,964 |
-| 3 | Artículo con título y subtítulo en mayúsculas | 6,810 |
-| 4 | Artículo con resumen repetido para la misma revista | 2,056 |
-| 5 | Artículo con autorías duplicadas | 1,968 |
-
-**Top 5 errores de media gravedad más frecuentes:**
-
-| Ranking | Tipo de Error | Ocurrencias |
-|---------|---------------|-------------|
-| 1 | Autor con apellido 2 de longitud menor de 4 caracteres | 6,468 |
-| 2 | Ejemplar marcado como no paginado y contiene artículos con página final | 5,257 |
-| 3 | Artículo con título repetido para la misma revista | 2,721 |
-| 4 | Artículo con referencias cuyo literal es demasiado corto | 2,080 |
-| 5 | Artículo con título repetido | 1,843 |
-
-**Distribución de revistas por rangos de errores:**
-
-| Rango de Errores | Nº Revistas | Porcentaje |
-|------------------|--------------|------------|
-| Muy Alto (>2000) | 9 | 9.5% |
-| Alto (1000-2000) | 10 | 10.5% |
-| Medio (500-999) | 8 | 8.4% |
-| Bajo (100-499) | 43 | 45.3% |
-| Muy Bajo (<100) | 25 | 26.3% |
-
-**Revistas con mayor proporción de errores graves:**
-
-| Ranking | Dominio | % Alta Gravedad | Errores Alta/Total |
-|---------|---------|-----------------|--------------------|
-| 1 | revistaderechovaldivia.cl | 97.6% | 1,160/1,188 |
-| 2 | intushistoria.uai.cl | 97.6% | 775/794 |
-| 3 | boletin.scha.cl | 94.6% | 2,390/2,526 |
-| 4 | nuestramerica.cl | 92.9% | 351/378 |
-| 5 | revistalimite.uta.cl | 91.9% | 846/921 |
-
-**Diversidad de tipos de errores:**
-
-| Categoría | Tipos Únicos |
-|-----------|---------------|
-| Alta gravedad | 23 |
-| Media gravedad | 17 |
-| **Total** | **40** |
-
-#### 3.8.6 Implicaciones para Indexación
-
-**Fortalezas identificadas:**
-- **Metadatos básicos completos:** Títulos y enlaces al 100%
-- **Información de autoría:** 99.3% de completitud
-- **Contenido académico:** 87% de resúmenes disponibles
-
-**Áreas de mejora críticas:**
-- **Referencias bibliográficas:** Solo 33.7% de completitud
-- **Palabras clave:** 65.6% requiere mejora para indexación
-- **Errores de alta gravedad:** 35,811 errores requieren atención prioritaria
-- **Problemas de paginación:** 12,201 artículos sin página inicial
-- **Estandarización de títulos:** 6,810 casos con mayúsculas incorrectas
-
-**Recomendaciones operativas:**
-1. **Priorización por calidad:** Enfocar esfuerzos en 25 revistas con <100 errores
-2. **Mejora de metadatos:** Implementar estándares para referencias y palabras clave
-3. **Capacitación editorial:** Programas de mejora de calidad para editores
-4. **Corrección de paginación:** Atender 12,201 artículos sin numeración
-5. **Estandarización de formato:** Corregir mayúsculas en títulos y subtítulos
-
-#### 3.8.7 URLs OAI Generadas para Dialnet (v6)
-
-- **Total URLs únicas:** 225 (vs 208 en versión anterior)
-- **URLs Universidad de Chile:** 58 (25.8%)
-- **Publicaciones 2024 representadas:** 11,540 (81.5% del total)
-- **Crecimiento neto representado:** +1,843 publicaciones Distribución Institucional Actualizada (v6)
-
-| Institución | Instalaciones | % | Pub. 2024 | Crecimiento |
-|-------------|---------------|---|-----------|-------------|
-| Universidad de Chile | 67 | 21.0% | 3,338 | +1,646 |
-| Pontificia Universidad Católica | 27 | 8.5% | 4,129 | -438 |
-| Universidad de Valparaíso | 15 | 4.7% | 227 | -23 |
-| Universidad de Concepción | 12 | 3.8% | 353 | -36 |
-| Universidad Austral de Chile | 7 | 2.2% | 213 | -59 |
-| Universidad de Santiago | 6 | 1.9% | 299 | +177 |
-| Universidad de La Frontera | 4 | 1.3% | - | - |
-| Otras instituciones | 181 | 56.7% | 5,603 | +739 |
-
-**Metodología de comparación:**
-Se ejecutó análisis preciso mediante `scripts/7_comparar_urls_v5_v6.py` que compara URLs por dominio normalizado, clasificando cambios como sustanciales o menores (www, paths, protocolos).
-
-**Resultados de estabilidad:**
-- **URLs v5:** 208 → **URLs v6:** 225 (+17 URLs netas)
-- **Dominios efectivamente iguales:** 185/208 (88.9% estabilidad)
-- **Dominios con cambios menores:** 7 (variaciones www, paths)
-- **Dominios con cambios sustanciales:** 0
-- **Crecimiento neto real:** +17 dominios (40 nuevos - 23 removidos)
-
-**Clasificación de cambios menores (7 dominios):**
-- `ajvs.cl`: www.ajvs.cl → ajvs.cl
-- `biotaxa.org`: /rce/oai → /index.php/index/oai
-- `joralres.com`: www.joralres.com → joralres.com
-- `reidu.cl`: reidu.cl → www.reidu.cl
-- `revistapleyade.cl`: revistapleyade.cl → www.revistapleyade.cl
-- `sisomosamericanos.cl`: sisomosamericanos.cl → www.sisomosamericanos.cl
-- `teps.cl`: teps.cl → www.teps.cl
-
-### 3.3 Análisis de Crossref - Revistas Chilenas Activas
-
-#### 3.3.1 Cobertura en Crossref
-El análisis de la presencia de revistas chilenas activas en Crossref revela una cobertura significativa:
-
-- **Total revistas analizadas:** 316
-- **Revistas encontradas en Crossref:** 256 (81.0%)
-- **Revistas no registradas:** 60 (19.0%)
-
-#### 3.3.2 Distribución de DOIs Registrados
-
-| Tipo de DOI | Cantidad Total | Promedio por Revista |
-|-------------|----------------|---------------------|
-| DOIs Actuales | 15,910 | 62.1 |
-| DOIs Históricos | 80,844 | 315.8 |
-| **Total DOIs** | **96,754** | **377.9** |
-
-#### 3.3.3 Cobertura de Metadatos
-
-**Metadatos Actuales (Current):**
-- Resúmenes: 76.3% ✅ Muy buena cobertura
-- Verificación de similitud: 73.8% ✅ Buena cobertura
-- Licencias: 51.5% ⚠️ Mejorable
-- ORCIDs: 44.9% ⚠️ Mejorable
-- ROR IDs: 18.2% ❌ Baja cobertura
-- Afiliaciones: 8.6% ❌ Muy baja cobertura
-- Referencias: 7.9% ❌ Muy baja cobertura
-- Políticas de actualización: 0.0% ❌ Sin implementar
-
-**Metadatos Históricos (Backfile):**
-- Resúmenes: 42.8%
-- Licencias: 28.5%
-- ORCIDs: 15.8%
-- Referencias: 8.1%
-- Afiliaciones: 3.2%
-
-#### 3.3.4 Top 10 Revistas por DOIs en Crossref
-
-| Posición | Revista | DOIs Totales | DOIs Actuales | DOIs Históricos |
-|----------|---------|--------------|---------------|-----------------|
-| 1 | Atenea (Concepción) | 10,350 | 90 | 10,260 |
-| 2 | Anales de la Universidad de Chile | 2,724 | 90 | 2,634 |
-| 3 | Journal of the Chilean Chemical Society | 1,806 | 73 | 1,733 |
-| 4 | ARS MEDICA Revista de Ciencias Médicas | 1,559 | 103 | 1,456 |
-| 5 | Estudios Internacionales | 1,548 | 42 | 1,506 |
-| 6 | Proyecciones (Antofagasta) | 1,519 | 302 | 1,217 |
-| 7 | Revista de Derecho Público | 1,334 | 23 | 1,311 |
-| 8 | Bosque (Valdivia) | 1,325 | 108 | 1,217 |
-| 9 | Revista de derecho (Coquimbo) | 1,252 | 166 | 1,086 |
-| 10 | Estudios pedagógicos (Valdivia) | 1,242 | 189 | 1,053 |
-
-#### 3.3.5 Relaciones de Versiones y Preprints
-El análisis de relaciones de versiones reveló que las revistas chilenas **no utilizan funcionalidades avanzadas** de Crossref:
-- Artículos con preprints: 0
-- Artículos que son preprints: 0
-- Artículos con versiones: 0
-- Relaciones de reemplazo: 0
-- Total relaciones de versión: 0
-
-#### 3.3.6 Observaciones Clave Crossref
-
-**Fortalezas:**
-- Alta cobertura en Crossref (81.0%)
-- Buena cobertura de resúmenes y verificación de similitud
-- Volumen significativo de DOIs registrados (96,754 totales)
-
-**Áreas de mejora:**
-- Baja cobertura de afiliaciones y referencias
-- Ausencia de políticas de actualización
-- No aprovechamiento de relaciones de versiones/preprints
-- Cobertura mejorable de ORCIDs y licencias
-
-### 3.7 Análisis OpenAlex Ampliado para Revistas Chilenas Activas
-
-Se realizó un enriquecimiento específico de datos OpenAlex para las **316 revistas chilenas activas**, obteniendo información detallada sobre políticas de acceso abierto, métricas de impacto y características editoriales.
-
-#### 3.7.1 Consideraciones Técnicas
-
-**Limitación metodológica:** De las 316 revistas activas, **12 revistas (3.8%) fueron excluidas** del análisis OpenAlex por carecer de ISSN válido, requisito indispensable para consultas en la API de OpenAlex.
-
-**Revistas excluidas (sin ISSN):**
-- Comunicaciones: una revista de geología andina
-- Boletín de la Universidad de Chile  
-- MGC / Revista de Gestión Cultural
-- Historia 396
-- Revista Bits de Ciencia
-- Revista de Estudios Históricos
-- Filosofía Juridica
-- Inferencias: Boletín de Bioestadística
-- Nutrición y Vida
-- Revista Estudiantil de Ensayos Monográficos
-- EMERGENCIAS: Cuaderno del Magíster en Comunicación Política
-- Mirada Hemisférica
-
-**Dataset final:** 304 revistas procesadas (96.2% de cobertura)
-
-#### 3.7.2 Resultados de Indexación y Visibilidad
-
-| Métrica | Valor | Porcentaje |
-|---------|-------|------------|
-| **Revistas procesadas** | 304 | 100% |
-| **Indexadas en OpenAlex** | 259 | **85.2%** |
-| **No indexadas** | 45 | 14.8% |
-| **Total artículos indexados** | 120,646 | - |
-| **Total citaciones** | 267,428 | - |
-
-#### 3.7.3 Políticas de Acceso Abierto
-
-| Categoría | Revistas | Porcentaje |
-|-----------|----------|------------|
-| **Completamente Open Access** | 245 | **94.6%** |
-| **Indexadas en DOAJ** | 132 | **51.0%** |
-| **Con APC informado** | 3 | 1.2% |
-| **Fuentes "Core" (CWTS)** | 8 | **3.1%** |
-
-**Hallazgo destacado:** El **94.6%** de las revistas chilenas indexadas en OpenAlex son completamente de acceso abierto, superando significativamente el promedio global.
-
-#### 3.7.4 Métricas de Impacto
-
-| Indicador | Promedio | Mediana |
-|-----------|----------|----------|
-| **H-index** | 9.1 | 6.0 |
-| **i10-index** | 26.3 | 12.0 |
-| **Índice de visibilidad** | 2.8 | 1.2 |
-| **APC promedio (USD)** | $693 | - |
-
-#### 3.7.5 Revistas de Mayor Impacto
-
-| Ranking | Revista | Visibilidad | H-index | Estado OA |
-|---------|---------|-------------|---------|----------|
-| 1 | Chungara Revista de Antropología Chilena | 51.56 | 35 | OA |
-| 2 | Gayana | 37.42 | 27 | OA + DOAJ |
-| 3 | Revista de Biología Marina y Oceanografía | 33.26 | 34 | OA |
-| 4 | Journal of the Chilean Chemical Society | 31.18 | 44 | OA |
-| 5 | Gayana Botanica | 27.40 | 24 | OA + DOAJ |
-
-#### 3.7.6 Visualizaciones
-
-![Distribución OpenAlex](visualizations/13_chile_openalex_distribucion.png)
-*Figura 1: Distribución de indexación en OpenAlex, políticas de acceso abierto, presencia en DOAJ y fuentes Core*
-
-![Métricas de Impacto](visualizations/13_chile_openalex_metricas.png)
-*Figura 2: Distribución de métricas de impacto (H-index, i10-index, índice de visibilidad) y correlaciones*
-
-![Rankings por Visibilidad](visualizations/13_chile_openalex_acceso_abierto.png)
-*Figura 3: Top 10 revistas por H-index e índice de visibilidad*
-
-#### 3.7.7 Implicaciones Estratégicas
-
-1. **Alta adopción de acceso abierto:** El 94.6% de revistas indexadas son completamente OA, posicionando a Chile como líder regional.
-
-2. **Oportunidad DOAJ:** Solo el 51% está en DOAJ, representando potencial de mejora para 127 revistas.
-
-3. **Concentración de impacto:** Las top 5 revistas concentran el mayor impacto en ciencias naturales y químicas.
-
-4. **Limitación técnica:** 12 revistas requieren asignación de ISSN para mejorar su visibilidad internacional.
-
-**Dataset generado:** `13_chile_openalex_ampliado.csv` (32 campos, 304 registros)
 
 ---
 
